// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Modal ClickOutside play-test: shadow DOM 1`] = `
<dialog part="dialog">
  <div class="container"
       part="container"
  >
    <header>
      <slot name="title">
      </slot>
      <button type="button"
              part="close"
              aria-label="Close"
      >
        X
      </button>
    </header>
    <slot>
    </slot>
  </div>
</dialog>
`;

exports[`components/Modal Main play-test: shadow DOM 1`] = `
<dialog part="dialog"
        open
>
  <div class="container"
       part="container"
  >
    <header>
      <slot name="title">
      </slot>
      <button type="button"
              part="close"
              aria-label="Close"
      >
        X
      </button>
    </header>
    <slot>
    </slot>
  </div>
</dialog>
`;
